See if I can solve the problem with the avatar image not showing up in the NavBar.

--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,4 +1,4 @@
-.Profile {
+/* .Profile {
     border-radius: 50%;
     object-fit: cover;
     margin: 0px 8px 0px 8px;
@@ -8,4 +8,10 @@
     border-radius: 50%;
     object-fit: cover;
     size: 100px;
-}
+} */
+
+.Avatar {
+    border-radius: 50%;
+    margin: px 8px 0px 8px;
+    object-fit: cover;
+  }
